--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -30,11 +30,48 @@
 {% block beforeContent %}
   {{ govukPhaseBanner({
       tag: {
-        text: "alpha"
+        text: "beta"
       },
       html: feedback + languageToggle
     })
   }}
+{% endblock %}
+
+{% block footer %}
+  {{ govukFooter({
+    meta: {
+      items: [
+        {
+          href: "https://www.gov.uk/help",
+          text: "Help"
+        },
+        {
+          href: "https://www.gov.uk/contact",
+          text: "Contact"
+        },
+        {
+          href: "https://www.gov.uk/help/privacy-notice",
+          text: "Privacy"
+        },
+        {
+          href: "",
+          text: "Cookies"
+        },
+        {
+          href: "https://find-court-tribunal.service.gov.uk/accessibility-statement",
+          text: "Accessibility statement"
+        },
+        {
+          href: "https://www.gov.uk/help/terms-conditions",
+          text: "Terms and conditions"
+        },
+        {
+          href: "https://www.gov.uk/cymraeg",
+          text: "Rhestr o Wasanaethau Cymraeg"
+        }
+      ]
+    }
+  }) }}
 {% endblock %}
 
 {% block bodyEnd %}
